# SkinVolt

./: .gitignore  Cargo.toml
SkinVolt/: README.md
SkinVolt/src-tauri/src/: commands.rs  db.rs  main.rs
SkinVolt/src-tauri/src/settings/: settings.rs
SkinVolt/src-tauri/src/steam/: mod.rs
SkinVolt/src-tauri/src/utils/: error.rs  logging.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.disabled.rs  commands.rs  db.rs  main.rs  schema.sql
src-tauri/src/alerts/: mod.rs
src-tauri/src/analytics/: indicators.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/inventory/: mod.rs
src-tauri/src/settings/: settings.rs
src-tauri/src/steam/: cache.rs  fetch.rs  validate.rs
src-tauri/src/utils/: backoff.rs  logging.rs  mod.rs
ui/: app.js  index.html  styles.css
