[package]
name = "skinvolt"
version = "0.1.0"
edition = "2021"
authors = ["Shane"]
description = "High‑voltage Steam Market intelligence. A premium analytics desktop app built with Rust + Tauri."
license = "MIT"
repository = "https://github.com/yourname/skinvolt"
readme = "README.md"

# Optional but recommended for release builds
publish = false

[dependencies]
# --- Core Async + HTTP ---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# --- Database / Caching ---
rusqlite = { version = "0.31", features = ["bundled"] }
# sled = "0.34"  # optional alternative

# --- Time / Dates ---
chrono = { version = "0.4", features = ["serde"] }

# --- Error Handling ---
thiserror = "1"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = "0.3"

# --- Math / Analytics ---
statrs = "0.16"
ndarray = "0.15"
ta = "0.5"

# --- Utility ---
regex = "1"
urlencoding = "2"
directories = "5"

# --- Tauri Backend ---
tauri = { version = "1", features = ["api-all"] }

[dev-dependencies]
tokio-test = "0.4"
assert_json_diff = "2"

[build-dependencies]
# For embedding assets or generating code at build time
tauri-build = { version = "1", features = [] }

[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
codegen-units = 1        # better optimization
panic = "abort"          # smaller binary
strip = true             # remove debug symbols

[features]
default = ["prod"]
prod = []
dev = []

