[package]
name = "skinvolt-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
once_cell = "1.18"
directories = "5"
thiserror = "1"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
urlencoding = "2.1.3"
tokio = { version = "1.50.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "skinvolt"
path = "src/main.rs"

